<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

   <!--this allows you to show which list item is currently selected.-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_donations"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/donations" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_ministries"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/ministries" />

        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/services" />

        <item
            android:id="@+id/nav_newsletter"
            android:icon="@drawable/ic_subscriptions_black_24dp"
            android:title="@string/newsletter" />
    </group>


    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/ic_facebook"
                android:title="@string/facebook" />
            <item
                android:id="@+id/nav_twitter"
                android:icon="@drawable/ic_twitter"
                android:title="@string/twitter" />
            <item
                android:id="@+id/nav_youtube"
                android:icon="@drawable/ic_youtube"
                android:title="@string/youtube" />

        </menu>
    </item>

</menu>
